[gd_scene load_steps=5 format=3 uid="uid://cuxqmqjkduk5h"]

[ext_resource type="StyleBox" uid="uid://bg7uqy3w5e0tk" path="res://resource/generic.stylebox" id="1_f5ymr"]
[ext_resource type="FontFile" uid="uid://dhibeydk3b3a5" path="res://font/RobotoCondensed-Bold.ttf" id="2_8ix5e"]
[ext_resource type="Script" path="res://script/widget/date_complex.gd" id="2_w54pc"]
[ext_resource type="FontFile" uid="uid://dsdiyhd717i2v" path="res://font/RobotoCondensed-Regular.ttf" id="3_2k6hf"]

[node name="DateComplex" type="PanelContainer"]
self_modulate = Color(0.219608, 0.717647, 0.392157, 1)
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_f5ymr")
script = ExtResource("2_w54pc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1

[node name="WeekdayG" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8ix5e")
theme_override_font_sizes/font_size = 24
text = "Sunday"
vertical_alignment = 1

[node name="WeekdayH" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2k6hf")
theme_override_font_sizes/font_size = 24
text = "Ahad"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1

[node name="DayG" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
self_modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8ix5e")
theme_override_font_sizes/font_size = 24
text = "12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DayH" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
self_modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2k6hf")
theme_override_font_sizes/font_size = 24
text = "34"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1

[node name="MonthG" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
self_modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8ix5e")
theme_override_font_sizes/font_size = 24
text = "December"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MonthH" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
self_modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2k6hf")
theme_override_font_sizes/font_size = 24
text = "Ramadhan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1

[node name="YearG" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
self_modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8ix5e")
theme_override_font_sizes/font_size = 24
text = "2024"
horizontal_alignment = 2
vertical_alignment = 1

[node name="YearH" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
self_modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2k6hf")
theme_override_font_sizes/font_size = 24
text = "1445"
horizontal_alignment = 2
vertical_alignment = 1
